--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "symfony/finder": "~2.0|~3.0",
     "symfony/console": "~2.0|~3.0",
     "phpseclib/phpseclib": "~2.0",
-    "league/container": "~2.0"
+    "league/container": "~2.0",
+    "symfony/process": "~2.3"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
